--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brasil API</title>
+    <title>Tabela FIPE</title>
     <link rel="stylesheet" href="style.css">
     <script src="./main.js" defer></script>
 </head>
@@ -19,20 +19,20 @@
                 <input id="code" type="" value="005303-1" required />
                 <button type="submit" id="buscar">Buscar</button>
             </div>
-            <select name="marca" id="marca">
+            <select disabled name="marca" id="marca">
                 <option value="-1">Selecione a marca</option>
                 <option value="A">VW - Volkswagen</option>
                 <option value="B">Fiat</option>
                 <option value="C">Honda</option>
                 <option value="D">Hyundai</option>
             </select>
-            <select name="modelo" id="modelo">
+            <select disabled name="modelo" id="modelo">
                 <option value="-1">Selecione o modelo</option>
                 <option value="A">Fox</option>
                 <option value="B">Gol</option>
                 <option value="C">Voyage</option>
             </select>
-            <select name="ano" id="ano" required>
+            <select disabled name="ano" id="ano" required>
                 <option value="-1">Selecione o ano</option>
                 <option value="A">2010</option>
                 <option value="B">2011</option>
